# zenith

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  config_example.env  main.py  pyproject.toml  requirements.txt  settings.py  settings.yml.example
backend/app/: __init__.py  setup_app.py
backend/app/bot_service/: Dockerfile  accounts.json.example  main.py  settings.py
backend/app/bot_service/bot_worker/: bot.py  bot_controller.py  utils.py
backend/app/core/: __init__.py  config.py  settings.py
backend/app/database/: __init__.py  database.py  models.py  utils.py
backend/app/redis_queues/: __init__.py  processor.py  redis_worker.py  utils.py
backend/app/router/: __init__.py  account_handler.py  deps.py  post_handler.py  shemas.py  social_action_hanlder.py  utils.py
backend/app/router/account/: __init__.py  account_handler.py  utils.py
backend/app/router/auth/: __init__.py  auth_handler.py  enums.py  manager.py  models.py  router.py  service.py  shemas.py  utils.py  validate_form.py
backend/app/router/comment/: models.py  router.py  service.py  shemas.py
backend/app/router/like/: models.py  router.py  (+1 more)
backend/app/task_redis/: Dockerfile  broker.py  tk.py
backend/app/websocket/: __init__.py  sio_manager.py
backend/bot_service/: content.py  main.py  settings.py
backend/bot_service/bot_worker/: bot.py  bot_controller.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: 3c0627027265_init.py  5e074465d4aa_add_user_role.py  6d4190a6ca34_topic_tables.py  7f243e377e29_fix_comment_text.py
(+147 files in other folders)
