[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "'qbr0q'",email = "qbroq@vk.com"}
]
requires-python = ">=3.12"
dependencies = [
    "sqlmodel (>=0.0.38,<0.0.39)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "pydantic-settings-yaml (>=0.2.0,<0.3.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)"
]

[tool.poetry.group.backend.dependencies]
fastapi = ">=0.136.1,<0.137.0"
uvicorn = ">=0.46.0,<0.47.0"
authx = ">=1.6.0,<2.0.0"
python-multipart = ">=0.0.28,<0.0.29"
python-socketio = ">=5.16.1,<6.0.0"

[tool.poetry.group.bots.dependencies]
requests = ">=2.33.1,<3.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
